--- a/index.html
+++ b/index.html
@@ -32,29 +32,57 @@
     <div class="add-transaction">
         <h3>Add New Transaction</h3>
         <form id="transactionForm">
-            <div>
+            <div class="form-group">
                 <label for="amount">Amount</label>
                 <input type="number" id="amount" required>
             </div>
-            <div>
+            <div class="form-group">
                 <label for="type">Type</label>
                 <select id="type" required>
                     <option value="income">Income</option>
                     <option value="expense">Expense</option>
                 </select>
             </div>
-            <div>
+            <div class="form-group">
                 <label for="date">Date</label>
                 <input type="date" id="date" required>
             </div>
-            <div>
+            <div class="form-group">
                 <label for="notes">Notes</label>
                 <input type="text" id="notes" placeholder="Add your note here">
             </div>
             <button type="submit">Add Transaction</button>
         </form>
     </div>
-    
+
+    <div class="filters">
+        <h3>Filters</h3>
+        <div class="form-group">
+            <label for="filterType">Type</label>
+            <select id="filterType">
+                <option value="all">All</option>
+                <option value="income">Income</option>
+                <option value="expense">Expense</option>
+            </select>
+        </div>
+        <div class="form-group">
+            <label for="minAmount">Min Amount</label>
+            <input type="number" id="minAmount">
+        </div>
+        <div class="form-group">
+            <label for="maxAmount">Max Amount</label>
+            <input type="number" id="maxAmount">
+        </div>
+        <div class="form-group">
+            <label for="filterDate">Date</label>
+            <input type="date" id="filterDate">
+        </div>
+        <div class="form-group">
+            <label for="searchNotes">Search Notes</label>
+            <input type="text" id="searchNotes" placeholder="Search in notes">
+        </div>
+    </div>
+
 </main>
 </body>
 </html>
