--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Expense Tracker</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-<main class="container">
-    <header class="header">
-        <h1>Expense Tracker</h1>
-    </header>
+<header>
+    <h1>Expense Tracker</h1>
+</header>
 
+<main class="container">
     <div class="balance-card">
         <div>
             <h2>Total Balance</h2>
