--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
     <div class="total-card">
         <div>
             <h2>Total Balance</h2>
-            <p>$0.00</p>
+            <p id="totalBalance">$0.00</p>
         </div>
     </div>
 
     <div class="summary">
         <div class="summary-card">
             <h3>Total Income</h3>
-            <p class="income">$0.00</p>
+            <p class="income" id="totalIncome">$0.00</p>
         </div>
         <div class="summary-card">
             <h3>Total Expenses</h3>
-            <p class="expense">$0.00</p>
+            <p class="expense" id="totalExpense">$0.00</p>
         </div>
     </div>
 
@@ -89,5 +89,10 @@
     </div>
 
 </div>
+
+<script src="scripts/utilities.js"></script>
+<script src="scripts/transactions.js"></script>
+<script src="scripts/index.js"></script>
+
 </body>
 </html>
